[package]
name = "shim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
mio = { version = "1.0.2", features = ["os-ext"] }
nix = { version = "0.29.0", features = ["process", "fs", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
