[package]
name = "shim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
nix = { version = "0.29.0", features = ["process", "fs", "signal"] }
shim-protos = { version = "0.1.0", path = "../shim-protos" }
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
