[package]
name = "shim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
command-fds = "0.3.0"
nix = { version = "0.29.0", features = ["process", "fs", "signal"] }
prost-types = "0.13.3"
shim-protos = { version = "0.1.0", path = "../shim-protos" }
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
